# codexfs

./: .gitignore  Cargo.toml  Makefile  justfile  rust-toolchain.toml
bench/compress/: justfile
bench/uncompress/: justfile
codexfs-core/: Cargo.toml
codexfs-core/src/: buffer.rs  compress.rs  inode.rs  lib.rs  sb.rs  utils.rs
codexfs-core/src/inode/: dir.rs  file.rs  inode_table.rs  symlink.rs
codexfs-fuse/: Cargo.toml
codexfs-fuse/src/: fuse.rs  main.rs
codexfs-mkfs/: Cargo.toml
codexfs-mkfs/src/: inode.rs  main.rs  sb.rs
crates/xz2/: Cargo.toml
crates/xz2/lzma-sys/: build.rs
crates/xz2/lzma-sys/src/: lib.rs
crates/xz2/src/: stream.rs
crates/xz2/tests/: xz.rs
